build: bump JDK from 1.6-1.8 to 17
for [JEP396](https://openjdk.org/jeps/396), spotless also needs upgrade
https://github.com/diffplug/spotless/pull/998

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,20 @@
 plugins {
     id 'java-library'
-    id "com.diffplug.spotless" version "5.17.1"
+    id "com.diffplug.spotless" version "6.11.0"
 }
 
 jar.baseName 'jp.co.yahoo.yconnect'
 version '3.0.0'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_6
-    targetCompatibility = JavaVersion.VERSION_1_6
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding("UTF-8")
 }
 
 repositories {
