--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 
     implementation 'javax.json:javax.json-api:1.0'
     implementation 'javax.servlet:servlet-api:2.5'
-    implementation 'log4j:log4j:1.2.17'
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.2'
     implementation 'org.glassfish:javax.json:1.0.4'
 }
